--- a/index/templates/dopebar.html
+++ b/index/templates/dopebar.html
@@ -1,7 +1,7 @@
 <div class="container" id="dopebar-wrapper">
   <div class="col-3 col-lg-5" id="dopebar-l">
-    <a class="dopebar-link dopebar-icon d-inline-block d-xl-none" data-toggle="collapse" href="#dopebar-collapse" aria-expanded="false" aria-controls="results-collapse-{{ results.drop }}" aria-label="dopebar-collapse">
-      <i class="fas fa-bars"></i>
+    <a class="dopebar-link d-inline-block d-xl-none" data-toggle="collapse" href="#dopebar-collapse" aria-expanded="false" aria-controls="results-collapse-{{ results.drop }}" aria-label="dopebar-collapse">
+      <i class="fas fa-bars" title="Expand"></i>
     </a>
     <ul class="d-none d-xl-inline-block">
       <li>
@@ -34,7 +34,7 @@
     </ul>
   </div>
   <div class="col-6 col-lg-2" id="dopebar-c">
-    <a class="dopebar-link index-link" href="/" title="dopepod">
+    <a class="dopebar-link index-link" href="/">
       <h1>dopepod</h1>
     </a>
   </div>
@@ -42,26 +42,26 @@
     {% if user.is_authenticated %}
       <form class="logout-form d-inline-block d-xl-none" method="POST" action="{% url 'logout' %}">
         {% csrf_token %}
-        <button class="dopebar-link ajax-logout dopebar-icon" type="submit">
-          <i class="fas fa-sign-out-alt"></i>
+        <button class="dopebar-link logout-link" type="submit">
+          <i class="fas fa-sign-out-alt" title="Logout"></i>
         </button>
       </form>
     {% else %}
-      <a class="dopebar-link ajax-login dopebar-icon d-inline-block d-xl-none" href="/?view=login">
-        <i class="fas fa-sign-out-alt"></i>
+      <a class="dopebar-link login-link d-inline-block d-xl-none" href="/?view=login">
+        <i class="fas fa-sign-in-alt" title="Login"></i>
       </a>
     {% endif %}
     <ul class="d-none d-xl-inline-block">
       {% if user.profile.dark_theme %}
         <li>
           <a class="dopebar-link lights-toggle" href="#">
-            <i class="far fa-lightbulb"></i>
+            <i class="far fa-lightbulb fa-lg" title="Toggle Lights"></i>
           </a>
         </li>
       {% else %}
         <li>
           <a class="dopebar-link lights-toggle lit" href="#">
-            <i class="far fa-lightbulb"></i>
+            <i class="far fa-lightbulb fa-lg" title="Toggle Lights"></i>
           </a>
         </li>
       {% endif %}
@@ -74,19 +74,19 @@
         <li>
           <form class="logout-form" method="POST" action="{% url 'logout' %}">
             {% csrf_token %}
-            <button class="dopebar-link ajax-logout" type="submit">
+            <button class="dopebar-link logout-link" type="submit">
               Logout
             </button>
           </form>
         </li>
       {% else %}
         <li>
-          <a class="dopebar-link ajax-login" href="/?view=login">
+          <a class="dopebar-link login-link" href="/?view=login">
             Login
           </a>
         </li>
         <li>
-          <a class="dopebar-link ajax-signup" href="/?view=signup">
+          <a class="dopebar-link signup-link" href="/?view=signup">
             Signup
           </a>
         </li>
@@ -97,13 +97,7 @@
           <input class="q" type="text" name="q" type="search" placeholder="Search for podcasts"
           aria-label="Search for podcasts" maxlength="30" autocomplete="off" accept-charset="utf-8">
           <button class="search-button" type="submit">
-            {% if request.is_ajax %}
-              <i class="fa fa-search icon"></i>
-            {% else %}
-              <span>
-                Go
-              </span>
-            {% endif %}
+            <i class="fa fa-search icon" title="Search"></i>
           </button>
         </form>
       </li>
@@ -115,22 +109,16 @@
       <input class="q" type="text" name="q" type="search" placeholder="Search for podcasts"
       aria-label="Search for podcasts" maxlength="30" autocomplete="off" accept-charset="utf-8">
       <button class="search-button" type="submit">
-        {% if request.is_ajax %}
-          <i class="fa fa-search icon"></i>
-        {% else %}
-          <span>
-            Go
-          </span>
-        {% endif %}
+        <i class="fa fa-search icon"></i>
       </button>
     </form>
     {% if user.profile.dark_theme %}
       <a class="dopebar-link lights-toggle" href="#">
-        <i class="far fa-lightbulb"></i>
+        <i class="far fa-lightbulb fa-lg" title="Toggle Lights"></i>
       </a>
     {% else %}
       <a class="dopebar-link lights-toggle lit" href="#">
-        <i class="far fa-lightbulb"></i>
+        <i class="far fa-lightbulb fa-lg" title="Toggle Lights"></i>
       </a>
     {% endif %}
     <ul>
@@ -168,19 +156,19 @@
         <li>
           <form class="logout-form" method="POST" action="{% url 'logout' %}">
             {% csrf_token %}
-            <button class="dopebar-link ajax-logout" type="submit">
+            <button class="dopebar-link logout-link" type="submit">
               Logout
             </button>
           </form>
         </li>
       {% else %}
         <li>
-          <a class="dopebar-link ajax-login" href="/?view=login">
+          <a class="dopebar-link login-link" href="/?view=login">
             Login
           </a>
         </li>
         <li>
-          <a class="dopebar-link ajax-signup" href="/?view=signup">
+          <a class="dopebar-link signup-link" href="/?view=signup">
             Signup
           </a>
         </li>
