--- a/podcasts/templates/charts.html
+++ b/podcasts/templates/charts.html
@@ -7,7 +7,7 @@
             {{ forloop.counter }}
           </span>
           <img class="img-fluid" src="https://dopepod.me/img/{{ podcast.artworkUrl }}100x100bb.jpg"
-          onerror="this.src='http://{{ podcast.artworkUrl }}100x100bb.jpg'" />
+          onerror="this.src='http://{{ podcast.artworkUrl }}100x100bb.jpg'" alt="{{ podcast.title }}" />
           <h1>
             <strong>
               {{ podcast.title }}
