--- a/podcasts/templates/last_played.html
+++ b/podcasts/templates/last_played.html
@@ -2,7 +2,7 @@
   {% for episode in results.episodes %}
     <div class="col-12 last-played-box">
       <div class="last-played-result clearfix">
-        <a class="showpod-link" data-podid="{{ episode.podcast.podid }}" href="{% url 'showpod' podid=episode.podcast.podid %}" title="{{ episode.podcast.title }}">
+        <a class="showpod-link" data-podid="{{ episode.podcast.podid }}" href="{% url 'showpod' podid=episode.podcast.podid %}" title="{{ episode.podcast.title }}" title="{{ episode.podcast.title }}">
           {% if episode.length %}
           <span class="result-length">
             {{ episode.length }}
@@ -11,7 +11,7 @@
           <img class="img-fluid" src="https://dopepod.me/img/{{ episode.podcast.artworkUrl }}100x100bb.jpg"
           onerror="this.src='http://{{ episode.podcast.artworkUrl }}100x100bb.jpg'" />
         </a>
-        <a class="showpod-link" data-podid="{{ episode.podcast.podid }}" href="{% url 'showpod' podid=episode.podcast.podid %}" title="{{ episode.podcast.title }}">
+        <a class="showpod-link" data-podid="{{ episode.podcast.podid }}" href="{% url 'showpod' podid=episode.podcast.podid %}" title="{{ episode.podcast.title }}" title="{{ episode.podcast.title }}">
           <h1>
             <strong>
               {{ episode.podcast.title }}
@@ -41,7 +41,7 @@
             </td>
           </tr>
         </table>
-        <div class="collapse last-played-collapse" id="last-played-collapse{{ forloop.counter }}">
+        <div class="collapse fade last-played-collapse" id="last-played-collapse{{ forloop.counter }}">
           <table>
             <tr>
               <td>
@@ -81,7 +81,7 @@
               <input type="hidden" name="mode" value="play" />
               <input type="hidden" name="signature" value="{{ episode.signature }}" />
               <button class="btn-dope active" type="submit">
-                Play
+                <i class="fas fa-play" title="Play"></i>
               </button>
             </form>
             {% if user.is_authenticated %}
@@ -94,13 +94,13 @@
                 </button>
               </form>
             {% endif %}
-            <a class="btn-dope active" href="{{ episode.url }}" title="Download" download>
-              Download
+            <a class="btn-dope active" href="{{ episode.url }}" download>
+              <i class="fas fa-download" title="Download"></i>
             </a>
           </div>
         </div>
         <button class="last-played-toggle" tabindex="{{ forloop.counter }}" data-toggle="collapse" data-target="#last-played-collapse{{ forloop.counter }}" aria-expanded="false">
-          <i class="fas fa-angle-down"></i>
+          <i class="fas fa-angle-down" title="Expand"></i>
         </button>
       </div>
     </div>
