--- a/podcasts/templates/pagination.html
+++ b/podcasts/templates/pagination.html
@@ -1,7 +1,7 @@
-<div class="pages-buttons">
+<div class="col-12 col-md-6 pages-buttons">
   {% if results.pagination.start %}
     <a class="btn-dope options-button" href="{{ results.urls.full_url }}">
-      <i class="fas fa-angle-double-left"></i>
+      <i class="fas fa-angle-double-left" title="First Page"></i>
     </a>
   {% endif %}
   {% for i in results.pagination.pages %}
@@ -21,7 +21,7 @@
   {% endfor %}
   {% if results.pagination.end %}
     <a class="btn-dope options-button" href="{{ results.urls.full_url }}&page={{ results.num_pages }}">
-      <i class="fas fa-angle-double-right"></i>
+      <i class="fas fa-angle-double-right" title="Last Page"></i>
     </a>
   {% endif %}
 </div>
