--- a/podcasts/templates/player.html
+++ b/podcasts/templates/player.html
@@ -2,19 +2,19 @@
 <div class="container px-0">
   <div class="col-12 col-lg-4 ml-auto">
     <div class="color-4-trans player-wrapper">
-      <a class="showpod-link" data-podid="{{ player.episode.podcast.podid }}" href="{% url 'showpod' podid=player.episode.podcast.podid %}">
+      <a class="showpod-link" data-podid="{{ player.episode.podcast.podid }}" href="{% url 'showpod' podid=player.episode.podcast.podid %}" title="{{ player.episode.podcast.title }}">
         <img class="img-fluid" src="https://dopepod.me/img/{{ player.episode.podcast.artworkUrl }}100x100bb.jpg"
-        onerror="this.src='http://{{ podcast.artworkUrl }}100x100bb.jpg'" />
+        onerror="this.src='http://{{ podcast.artworkUrl }}100x100bb.jpg'" alt="{{ player.episode.podcast.title }}" />
       </a>
       <div class="player-buttons">
-        <a class="btn-dope player-minimize" href="#" aria-label="Minimize">
-          <i class="fas fa-minus-circle"></i>
+        <a class="btn-dope player-minimize" href="#">
+          <i class="fas fa-minus" title="Minimize"></i>
         </a>
-        <a class="btn-dope player-close" href="#" aria-label="Close">
-          <i class="fas fa-times-circle"></i>
+        <a class="btn-dope player-close" href="#">
+          <i class="fas fa-times" title="Close"></i>
         </a>
       </div>
-      <a class="showpod-link" data-podid="{{ player.episode.podcast.podid }}" href="{% url 'showpod' podid=player.episode.podcast.podid %}">
+      <a class="showpod-link" data-podid="{{ player.episode.podcast.podid }}" href="{% url 'showpod' podid=player.episode.podcast.podid %}" title="{{ player.episode.podcast.title }}">
         <div class="player-title">
           <h1>
             {{ player.episode.podcast.title }}
@@ -39,7 +39,7 @@
 <div class="col-12 color-4-trans cookie-banner">
   <h1>This site uses cookies</h1>
   <button class="btn-dope" onclick="cookieBannerClose()">
-    <i class="fas fa-times-circle"></i>
+    <i class="fas fa-times"></i>
   </button>
 </div>
 {% endif %}
