--- a/podcasts/templates/subscriptions.html
+++ b/podcasts/templates/subscriptions.html
@@ -3,11 +3,11 @@
     {% with subscription.podcast as podcast %}
       <div class="col-12 col-md-4 subscriptions-box">
         <div class="subscriptions-result clearfix" data-podid="{{ podcast.podid }}">
-          <a class="showpod-link" data-podid="{{ podcast.podid }}" href="/showpod/{{ podcast.podid }}/">
+          <a class="showpod-link" data-podid="{{ podcast.podid }}" href="/showpod/{{ podcast.podid }}/" title="{{ podcast.title }}">
             <img class="img-fluid" src="https://dopepod.me/img/{{ podcast.artworkUrl }}100x100bb.jpg"
-            onerror="this.src='http://{{ podcast.artworkUrl }}100x100bb.jpg'" />
+            onerror="this.src='http://{{ podcast.artworkUrl }}100x100bb.jpg'" alt="{{ podcast.title }}" />
           </a>
-          <a class="showpod-link" data-podid="{{ podcast.podid }}" href="/showpod/{{ podcast.podid }}/">
+          <a class="showpod-link" data-podid="{{ podcast.podid }}" href="/showpod/{{ podcast.podid }}/" title="{{ podcast.title }}">
             <h1>
               <strong>
                 {{ podcast.title }}
@@ -20,10 +20,10 @@
           </p>
           <div class="subscriptions-buttons">
             <a class="btn-dope unsubscribe-button sub-nix" href="{% url 'unsubscribe' %}" >
-              <i class="fas fa-times-circle"></i>
+              <i class="fas fa-times" title="Unsubscribe"></i>
             </a>
             <button class="btn-dope select-subscription">
-              <i class="fas fa-check-circle"></i>
+              <i class="fas fa-check" title="Select"></i>
             </button>
           </div>
         </div>
