--- a/index/templates/dashboard.html
+++ b/index/templates/dashboard.html
@@ -1,4 +1,4 @@
-{% extends request.is_ajax|yesno:'ajax.html,base.html' %}
+{% extends request.is_ajax|yesno:'ajax.min.html,base.min.html' %}
 
 {% block title %}
 dopepod
