--- a/index/templates/base.html
+++ b/index/templates/base.html
@@ -18,7 +18,7 @@
     <link rel="stylesheet" type="text/css" href="//fonts.googleapis.com/css?family=Orbitron" />
     <link href="https://fonts.googleapis.com/css?family=Exo" rel="stylesheet">
     <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/css/bootstrap.min.css" integrity="sha384-Gn5384xqQ1aoWXA+058RXPxPg6fy4IWvTNh0E263XmFcJlSAwiGgFAW/dAiS6JXm" crossorigin="anonymous">
-    <link rel="stylesheet" href="{% static 'style.css' %}">
+    <link rel="stylesheet" href="{% static 'style.min.css' %}">
   </head>
 {% if user.profile.dark_theme %}
   <body class="darken">
@@ -29,7 +29,7 @@
     <div class="container-fluid px-0">
       <!-- MULTIBAR -->
       <nav class="navbar fixed-top color-4-trans" id="dopebar">
-        {% include 'dopebar.html' %}
+        {% include 'dopebar.min.html' %}
       </nav>
       <div class="container" id="main-wrapper">
         <div class="row">
@@ -38,7 +38,7 @@
             <div class="row" id="charts">
               {% if charts %}
                 {% with charts as results %}
-                  {% include 'results_base.html' %}
+                  {% include 'results_base.min.html' %}
                 {% endwith %}
               {% endif %}
             </div>
@@ -55,7 +55,7 @@
             <div class="row" id="last-played">
               {% with last_played as results %}
                 {% if last_played %}
-                  {% include 'results_base.html' %}
+                  {% include 'results_base.min.html' %}
                 {% endif %}
               {% endwith %}
             </div>
@@ -64,16 +64,16 @@
       </div>
       <!-- PLAYER -->
       <div class="container-fluid fixed-bottom" id="player">
-        {% include 'player.html' %}
+        {% include 'player.min.html' %}
       </div>
       <div class="loaders d-none">
-        {% include 'circle_loading.html' %}
-        {% include 'button_loading.html' %}
+        {% include 'circle_loading.min.html' %}
+        {% include 'button_loading.min.html' %}
       </div>
     </div>
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.3.1/jquery.min.js"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.12.3/umd/popper.min.js" integrity="sha384-vFJXuSJphROIrBnz7yo7oB41mKfc8JzQZiCq4NCceLEaO4IHwicKwpJf9c9IpFgh" crossorigin="anonymous"></script>
     <script src="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0-beta.2/js/bootstrap.min.js" integrity="sha384-alpBpkh1PFOepccYVYDB4do5UnbKysX5WZXm3XxPqe5iKTfUKjNkCk9SaVuEZflJ" crossorigin="anonymous"></script>
-    <script src="{% static 'scripts.js' %}"></script>
+    <script src="{% static 'scripts.min.js' %}"></script>
   </body>
 </html>
